Fixed spacing from removing community image.

--- a/style.css
+++ b/style.css
@@ -987,7 +987,7 @@ ul {
 }
 
 .community-image {
-  min-height: 300px;
+  min-height: 0px;
   background-image: url($community_image);
   background-position: center;
   background-repeat: no-repeat;
